--- a/animation-logo.html
+++ b/animation-logo.html
@@ -2,11 +2,13 @@
 <html lang=en>
     <head>
         <meta charset=utf-8>
-        <link rel="stylesheet" type="text/css" href="css/animation.css">
+        <link rel="stylesheet" type="text/css" href="css/animation-logo.css.css">
         <title>My First animation</title>
     </head>
 
     <body>
-        <div></div>
+        <div>
+            <img src="images/linkedin-logo.png" alt="LinkedIn Logo">
+        </div>
     </body>
 </html>
